--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,10 +79,6 @@
     margin-bottom: 15px;
   }
 
-  #porfolio-app {
-    padding: 15px;
-  }
-
   .portfolio-app-title {
     position: absolute;
     bottom: 20px;
@@ -96,6 +92,12 @@
     border-bottom: 0;
     font-family: 'Catamaran', Sans-Serif;
     font-size: 20px;
+  }
+
+  .card {
+    margin-bottom: 15px;
+    margin-right: 15px;
+    font-family: 'Catamaran', Sans-Serif;
   }
 
   img {
